# listenbrainz-auto-mapper

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cspell.json  pyproject.toml
.claude/skills/map-listens/: SKILL.md  execute.py  fetch_listens.py  search_batch.py
.cspell/: words.txt
src/lb_mapper/: __init__.py  cli.py  lb_client.py  lb_search.py  mapper.py  mb_search.py  translator.py
src/lb_mapper/cli/: __init__.py  execute.py  fetch_listens.py  search_batch.py
