[project]
name = "lb-mapper"
version = "0.1.0"
description = "Automatically map unlinked ListenBrainz listens to MusicBrainz recordings"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lb_mapper"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
]
