[project]
name = "lb-mapper"
version = "0.1.0"
description = "Automatically map unlinked ListenBrainz listens to MusicBrainz recordings"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lb_mapper"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
split-on-trailing-comma = true
combine-as-imports = true

[tool.mypy]
strict = true
